# contract-analysis-use-case

./: .env_example  README.md  pyproject.toml  report.md
src/analyzing_contract_clauses_for_conflicts_and_similarities/: crew.py  main.py
src/analyzing_contract_clauses_for_conflicts_and_similarities/config/: agents.yaml  tasks.yaml
src/analyzing_contract_clauses_for_conflicts_and_similarities/tools/: pre_process_docs.py  qdrant_vector_search_tool.py
